# ntimetable

./: Cargo.toml  conv.py  history_weights.txt  run_all.py
500-iters/comp01/: config.json  criteria.json  events.json  people.json  rooms_adj.csv
500-iters/comp02/: people.json  rooms.json
500-iters/comp03/: log.json
500-iters/comp04/: criteria.json  events.json  rooms_adj.csv
500-iters/comp05/: events.json  people.json  rooms_adj.csv
500-iters/comp06/: criteria.json  people.json  rooms_adj.csv
500-iters/comp07/: criteria.json  people.json  rooms_adj.csv
500-iters/comp08/: events.json  rooms.json
500-iters/comp09/: criteria.json  log.json  rooms_adj.csv
500-iters/comp10/: criteria.json  people.json  rooms_adj.csv
500-iters/comp11/: config.json  events.json  log.json
500-iters/comp12/: criteria.json  people.json  rooms.json  rooms_adj.csv
500-iters/comp13/: criteria.json  events.json  log.json  people.json  rooms_adj.csv
500-iters/comp14/: criteria.json  events.json
500-iters/comp15/: events.json  log.json  rooms_adj.csv
500-iters/comp16/: criteria.json  events.json  people.json  rooms.json  rooms_adj.csv
500-iters/comp17/: criteria.json  events.json  rooms.json
500-iters/comp18/: criteria.json  events.json  people.json  rooms_adj.csv
500-iters/comp19/: people.json  rooms_adj.csv
500-iters/comp20/: events.json  people.json  rooms.json  rooms_adj.csv
500-iters/comp21/: criteria.json  events.json  log.json
benches/: bitmap.rs  initial.rs  neighborhoods.rs  pareto.rs
converted/comp01/: log.json  rooms.json
converted/comp02/: config.json  criteria.json  events.json  log.json  rooms_adj.csv
converted/comp03/: log.json  rooms_adj.csv
converted/comp04/: log.json  people.json  rooms.json
converted/comp05/: config.json  criteria.json  rooms.json
converted/comp06/: events.json
converted/comp07/: events.json  rooms.json
converted/comp08/: criteria.json  log.json  people.json  rooms_adj.csv
converted/comp09/: events.json  log.json  people.json  rooms.json
converted/comp10/: events.json
converted/comp11/: criteria.json  log.json  people.json  rooms.json  rooms_adj.csv
datasets/: toy.ctt
demo/: config.json  criteria.json  events.json  people.json  rooms.json  rooms_adj.csv
playground/: Cargo.toml
playground/src/: main.rs
scripts/: make_table.py  plot_history_weights.py  plot_sum_scores.py  summary_tests.py  vis_rooms.py
src/: initial.rs  log.rs  main.rs  optimize.rs  pareto.rs  utils.rs
(+41 files in other folders)
