[package]
name = "ntimetable"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ntimetable"
path = "src/main.rs"

[[bin]]
name = "ntimetable"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "pareto"
harness = false

[dependencies]
clap = { version = "4.4.13", features = ["derive"] }
rand = { version = "0.8.5" }
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.111"
toml = "0.8.8"
