workspace = { members = ["playground"] }
[package]
name = "ntimetable"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ntimetable"
path = "src/main.rs"

# [[bin]]
# name = "ntimetable"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "pareto"
harness = false

[[bench]]
name = "bitmap"
harness = false

[[bench]]
name = "initial"
harness = false

[[bench]]
name = "neighborhoods"
harness = false

[dependencies]
clap = { version = "4.4.13", features = ["derive"] }
colored = "2.1.0"
comfy-table = "7.1.0"
crossbeam = { version = "0.8.3", features = ["crossbeam-channel"] }
ctrlc = "3.4.2"
enum_dispatch = "0.3.12"
itertools = "0.12.0"
rand = { version = "0.8.5" }
rayon = "1.8.0"
roaring = "0.10.2"
rustc-hash = "1.1.0"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = { version = "1.0.111", features = ["raw_value"] }
toml = "0.8.8"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"
